--- a/action.yaml
+++ b/action.yaml
@@ -1,5 +1,8 @@
 name: 'Deploy Deploy Request Action'
 description: 'Deploys an open deploy request for a PlanetScale database.'
+branding:
+  color: 'orange'
+  icon: 'database'
 inputs:
   database_name:
     description: 'The name of the database.'
